Edited git ignore to ignore 'public~/bootsrap' (contains bootstrap needs).
Deleted unneeded files of css.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header>
+	<header class="text-center">
 		<div class="container">
 			<div id="headerTitle">
 				<img src="#" alt="logo" /><h1>役立つコラム</h1>
@@ -18,7 +18,7 @@
 		</div>
 	</header>
 
-	<div id="main-content">
+	<div id="main-content" class="text-center">
 		<div class="container">
 
 			<div class="cards">
@@ -142,7 +142,7 @@
 		</div>
 	</div>
 
-	<div class="forTop gotop">
+	<div class="forTop gotop text-center">
 		<div class="container">
 			<a href="#top">
 				<img src="#" alt="ページトップへ">
