Done CSS coding until header and cards. Add images for cards.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -25,13 +25,13 @@
 				<div class="container-fluid">
 
 					<div class="row animate-box fadeInUp animated">
-						<div class="col-me-12 heading">
+						<div class="col-md-12 heading">
 							<h2>役立つコラムをご紹介します。</h2>
 						</div>
 					</div>
 
 					<div class="row">
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -40,7 +40,7 @@
 							</a>
 						</div>
 
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -49,7 +49,7 @@
 							</a>
 						</div>
 
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -58,7 +58,7 @@
 							</a>
 						</div>
 
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -67,7 +67,7 @@
 							</a>
 						</div>
 
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -76,7 +76,7 @@
 							</a>
 						</div>
 
-						<div class="col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
 								<img src="#" alt="column image" class="img-responsive">
 								<div class="card-body">
@@ -153,27 +153,29 @@
 	<footer>
 		<div class="container">
 
-			<div class="footer-logo">
-				<a href="#" target="_blank">
-					<img src="#" alt="logo">
-				</a>
+			<div id="footerContents">
+				<div class="footer-logo">
+					<a href="#" target="_blank">
+						<img src="#" alt="logo">
+					</a>
+				</div>
+	
+				<ul class="footer-nav">
+					<li>
+						<a href="#">会社</a><span>|</span>
+					</li>
+	
+					<li>
+						<a href="#">会社</a><span>|</span>
+					</li>
+	
+					<li>
+						<a href="#">会社</a><span>|</span>
+					</li>
+				</ul>
+	
+				<p class="copyright">Copyright</p>
 			</div>
-
-			<ul class="footer-nav">
-				<li>
-					<a href="#">会社</a><span>|</span>
-				</li>
-
-				<li>
-					<a href="#">会社</a><span>|</span>
-				</li>
-
-				<li>
-					<a href="#">会社</a><span>|</span>
-				</li>
-			</ul>
-
-			<p class="copyright">Copyright</p>
 		</div>
 	</footer>
 	
