Done fixing css of 'cards' section.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -33,7 +33,7 @@
 					<div class="row">
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_1.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
@@ -42,7 +42,7 @@
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_2.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
@@ -51,7 +51,7 @@
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_3.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
@@ -60,7 +60,7 @@
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_4.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
@@ -69,7 +69,7 @@
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_5.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
@@ -78,7 +78,7 @@
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="#" alt="column image" class="img-responsive">
+								<img src="./images/cards/card_image_6.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
 								</div>
