--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Column Site</title>
-	<link rel="stylesheet" href="css/boostrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="./css/boostrap.min.css">
+	<link rel="stylesheet" href="./css/animate.css">
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	<header class="text-center">
@@ -99,41 +99,41 @@
 		</div>
 
 		<div class="container">
-			<div class="row" id="features">
+			<div class="row" id="relatedSites">
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_1.png">
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_2.png">
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_3.png">
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_4.png">
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_5.png">
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#">
-						<img src="#">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_6.png">
 					</a>
 				</div>
 
@@ -142,10 +142,10 @@
 		</div>
 	</div>
 
-	<div class="forTop gotop text-center">
+	<div class="goTop-wrapper text-center">
 		<div class="container">
-			<a href="#top">
-				<img src="#" alt="ページトップへ">
+			<a href="#top" class="goTop">
+				<p>ページトップへ</p><img src="./images/triangle.svg" alt="to top">
 			</a>
 		</div>
 	</div>
