Changed a bit of CSS for header. Add logo image.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -10,11 +10,10 @@
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-	<header class="text-center">
+	<header>
 		<div class="container">
-			<div id="headerTitle">
-				<img src="#" alt="logo" /><h1>役立つコラム</h1>
-			</div>
+				<img src="./images/logo.png" alt="logo" />
+				<h1>役立つコラム</h1>
 		</div>
 	</header>
 
@@ -154,27 +153,27 @@
 		<div class="container">
 
 			<div id="footerContents">
-				<div class="footer-logo">
+				<div class="footer-logo col-md-1">
 					<a href="#" target="_blank">
 						<img src="#" alt="logo">
 					</a>
 				</div>
 	
-				<ul class="footer-nav">
+				<ul class="footer-nav col-md-8">
 					<li>
-						<a href="#">会社</a><span>|</span>
+						<a href="#">会社</a>
 					</li>
 	
 					<li>
-						<a href="#">会社</a><span>|</span>
+						<a href="#">会社</a>
 					</li>
 	
 					<li>
-						<a href="#">会社</a><span>|</span>
+						<a href="#">会社</a>
 					</li>
 				</ul>
 	
-				<p class="copyright">Copyright</p>
+				<p class="copyright col-md-3">Copyright</p>
 			</div>
 		</div>
 	</footer>
