Changed size of logo, and add favicon. Changed a bit of layout for header and footer.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Column Site</title>
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./css/boostrap.min.css">
 	<link rel="stylesheet" href="./css/animate.css">
 	<link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
 	<header>
 		<div class="container">
+			<div class="header-logo">
 				<img src="./images/logo.png" alt="logo" />
+			</div>
+
+			<div class="text-center">
 				<h1>役立つコラム</h1>
+			</div>
 		</div>
 	</header>
 
@@ -23,10 +31,10 @@
 			<div class="cards">
 				<div class="container-fluid">
 
-					<div class="row animate-box fadeInUp animated">
-						<div class="col-md-12 heading">
-							<h2>役立つコラムをご紹介します。</h2>
-						</div>
+					<div class="col-md-12 heading animate-box fadeInUp animated">
+
+						<h2>役立つコラムをご紹介します</h2>
+
 					</div>
 
 					<div class="row">
@@ -89,15 +97,14 @@
 			</div>
 		</div>
 
-		<div class="col-md-12 heading animate-box fadeInUp animated">
-			<div class="container">
+
+
+		<div class="container">
+			<div class="col-md-12 heading animate-box fadeInUp animated">
 
 				<h2>関連サイト一覧</h2>
 
 			</div>
-		</div>
-
-		<div class="container">
 			<div class="row" id="relatedSites">
 
 				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
@@ -153,31 +160,32 @@
 		<div class="container">
 
 			<div id="footerContents">
-				<div class="footer-logo col-md-1">
+				<div class="footer-logo">
 					<a href="#" target="_blank">
-						<img src="#" alt="logo">
+						<img src="./images/logo.png" alt="logo">
 					</a>
 				</div>
-	
-				<ul class="footer-nav col-md-8">
+
+				<ul class="footer-nav">
 					<li>
 						<a href="#">会社</a>
 					</li>
-	
+
 					<li>
 						<a href="#">会社</a>
 					</li>
-	
+
 					<li>
 						<a href="#">会社</a>
 					</li>
 				</ul>
-	
-				<p class="copyright col-md-3">Copyright</p>
+
+				<p class="copyright">Copyright</p>
 			</div>
 		</div>
 	</footer>
-	
+
 	<script src="js/main.js"></script>
 </body>
+
 </html>
