Add Javascripts, and wrote 'main.js' for 'goTop'.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 
-	<div class="goTop-wrapper text-center">
+	<div id="scrollToTop" class="goTop-wrapper text-center">
 		<div class="container">
 			<a href="#top" class="goTop">
 				<p>ページトップへ</p><img src="./images/triangle.svg" alt="to top">
@@ -185,6 +185,9 @@
 		</div>
 	</footer>
 
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/jquery-3.5.1.min.js"></script>
+	<script src="./js/jquery.easing.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
