--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./css/boostrap.min.css">
 	<link rel="stylesheet" href="./css/animate.css">
+	<link rel="stylesheet" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -20,7 +21,7 @@
 			</div>
 
 			<div class="text-center">
-				<h1>役立つコラム</h1>
+				<a href="#top"><h1>役立つコラム</h1></a>
 			</div>
 		</div>
 	</header>
@@ -39,7 +40,7 @@
 
 					<div class="row">
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
+							<a href="./column1.html" class="card">
 								<img src="./images/cards/card_image_1.png" alt="column image" class="img-responsive">
 								<div class="card-body">
 									<h3>コラム１</h3>
@@ -51,7 +52,7 @@
 							<a href="#" class="card">
 								<img src="./images/cards/card_image_2.png" alt="column image" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>コラム２</h3>
 								</div>
 							</a>
 						</div>
@@ -60,7 +61,7 @@
 							<a href="#" class="card">
 								<img src="./images/cards/card_image_3.png" alt="column image" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>コラム３</h3>
 								</div>
 							</a>
 						</div>
@@ -69,7 +70,7 @@
 							<a href="#" class="card">
 								<img src="./images/cards/card_image_4.png" alt="column image" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>コラム４</h3>
 								</div>
 							</a>
 						</div>
@@ -78,7 +79,7 @@
 							<a href="#" class="card">
 								<img src="./images/cards/card_image_5.png" alt="column image" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>コラム５</h3>
 								</div>
 							</a>
 						</div>
@@ -87,7 +88,7 @@
 							<a href="#" class="card">
 								<img src="./images/cards/card_image_6.png" alt="column image" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>コラム６</h3>
 								</div>
 							</a>
 						</div>
@@ -151,7 +152,7 @@
 	<div id="scrollToTop" class="goTop-wrapper text-center">
 		<div class="container">
 			<a href="#top" class="goTop">
-				<p>ページトップへ</p><img src="./images/triangle.svg" alt="to top">
+				<p>ページトップへ</p>
 			</a>
 		</div>
 	</div>
@@ -168,19 +169,19 @@
 
 				<ul class="footer-nav">
 					<li>
-						<a href="#">会社</a>
+						<a href="#">会社概要</a>
 					</li>
 
 					<li>
-						<a href="#">会社</a>
+						<a href="#">関連ブランド</a>
 					</li>
 
 					<li>
-						<a href="#">会社</a>
+						<a href="#">プライバシーポリシー</a>
 					</li>
 				</ul>
 
-				<p class="copyright">Copyright</p>
+				<p class="copyright">Copyright Leon Mah</p>
 			</div>
 		</div>
 	</footer>
