Edited CSS for column contents.

--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -52,19 +52,18 @@
 					<a href="./index.html" class="left-menu-to-top">トップへ戻る</a>
 				</nav>
 
-				<img class="col-md-5 col-sm-6" src="./images/cards/card_image_1.png" alt="">
-				<ul class="column-content-list col-md-3 col-sm-6">
-					<li>記事１</li>
-					<li>記事２</li>
-					<li>記事３</li>
-					<li>記事４</li>
-					<li>記事５</li>
-					<li>記事６</li>
-				</ul>
+				<div class="column-content col-md-8 col-sm-12">
+					<img class="" src="./images/cards/card_image_1.png" alt="">
+					<ul class="column-content-list">
+						<li>記事１</li>
+						<li>記事２</li>
+						<li>記事３</li>
+						<li>記事４</li>
+						<li>記事５</li>
+						<li>記事６</li>
+					</ul>
+				</div>
 			</div>
-
-
-
 		</div>
 	</div>
 
