Done debug; link tab's 'href' was wrong.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Column Site</title>
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="./css/boostrap.min.css">
+	<link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/animate.css">
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" href="./css/main.css">
@@ -149,7 +149,7 @@
 		</div>
 	</div>
 
-	<div id="scrollToTop" class="goTop-wrapper text-center">
+	<div id="scrollToTop" class="goTop-wrapper">
 		<div class="container">
 			<a href="#top" class="goTop">
 				<p>ページトップへ</p>
