--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -37,16 +37,16 @@
 					<h2>コラム１</h2>
 				</div>
 
-				<nav class="left-menu-nav d-sm-none d-md-block col-md-4">
+				<nav id="leftMenuNav" class="left-menu-nav d-sm-none d-md-block col-md-4">
 					<h3>役立つ情報一覧</h3>
 
 					<ul>
-						<li>コラム1</li>
-						<li>コラム2</li>
-						<li>コラム3</li>
-						<li>コラム4</li>
-						<li>コラム5</li>
-						<li>コラム6</li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
 					</ul>
 
 					<a href="./index.html" class="left-menu-to-top">トップへ戻る</a>
@@ -68,7 +68,7 @@
 	</div>
 
 
-	<div id="scrollToTop" class="goTop-wrapper text-center">
+	<div id="scrollToTop" class="goTop-wrapper">
 		<div class="container">
 			<a href="#top" class="goTop">
 				<p>ページトップへ</p>
