--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -29,15 +29,14 @@
 	</header>
 
 
-	<div id="main-content" class="text-center">
-		<div class="container" style="height: 1000px;">
-			<div class="column-page-wrapper row">
+	<div id="main-content">
+		<div class="container">
+			<div class="col-md-12 heading text-center animate-box fadeInUp animated">
+				<h2>コラム１</h2>
+			</div>
 
-				<div class="col-md-12 heading animate-box fadeInUp animated">
-					<h2>コラム１</h2>
-				</div>
-
-				<nav id="leftMenuNav" class="left-menu-nav d-sm-none d-md-block col-md-4">
+			<div class="column-layout-wrapper row">
+				<nav id="leftMenuNav" class="left-menu-nav d-none d-md-block col-md-4">
 					<h3>役立つ情報一覧</h3>
 
 					<ul>
@@ -52,16 +51,30 @@
 					<a href="./index.html" class="left-menu-to-top">トップへ戻る</a>
 				</nav>
 
-				<div class="column-content col-md-8 col-sm-12">
-					<img class="" src="./images/cards/card_image_1.png" alt="">
-					<ul class="column-content-list">
-						<li>記事１</li>
-						<li>記事２</li>
-						<li>記事３</li>
-						<li>記事４</li>
-						<li>記事５</li>
-						<li>記事６</li>
-					</ul>
+				<div class="column col-md-7 col-sm-12">
+					<div class="column-content">
+						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list col-sm-6">
+							<li>記事１</li>
+							<li>記事２</li>
+							<li>記事３</li>
+							<li>記事４</li>
+							<li>記事５</li>
+							<li>記事６</li>
+						</ul>
+					</div>
+
+					<div class="column-content">
+						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list col-sm-6">
+							<li>記事１</li>
+							<li>記事２</li>
+							<li>記事３</li>
+							<li>記事４</li>
+							<li>記事５</li>
+							<li>記事６</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
