Almost done coding CSS for resposivle.

--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -29,7 +29,7 @@
 	</header>
 
 
-	<div id="main-content">
+	<div id="main-content" class="text-center">
 		<div class="container">
 			<div class="col-md-12 heading text-center animate-box fadeInUp animated">
 				<h2>コラム１</h2>
@@ -51,31 +51,108 @@
 					<a href="./index.html" class="left-menu-to-top">トップへ戻る</a>
 				</nav>
 
-				<div class="column col-md-7 col-sm-12">
+				<div class="column col-md-8 col-sm-12">
 					<div class="column-content">
-						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
-						<ul class="column-content-list col-sm-6">
-							<li>記事１</li>
-							<li>記事２</li>
-							<li>記事３</li>
-							<li>記事４</li>
-							<li>記事５</li>
-							<li>記事６</li>
+						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list col-sm-6 col-xs-12">
+							<li><a href="#">記事１</a></li>
+							<li><a href="#">記事２</a></li>
+							<li><a href="#">記事３</a></li>
+							<li><a href="#">記事４</a></li>
+							<li><a href="#">記事５</a></li>
+							<li><a href="#">記事６</a></li>
 						</ul>
 					</div>
-
 					<div class="column-content">
-						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
-						<ul class="column-content-list col-sm-6">
-							<li>記事１</li>
-							<li>記事２</li>
-							<li>記事３</li>
-							<li>記事４</li>
-							<li>記事５</li>
-							<li>記事６</li>
+						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list col-sm-6 col-xs-12">
+							<li><a href="#">記事１</a></li>
+							<li><a href="#">記事２</a></li>
+							<li><a href="#">記事３</a></li>
+							<li><a href="#">記事４</a></li>
+							<li><a href="#">記事５</a></li>
+							<li><a href="#">記事６</a></li>
 						</ul>
 					</div>
+					<div class="column-content">
+						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list col-sm-6 col-xs-12">
+							<li><a href="#">記事１</a></li>
+							<li><a href="#">記事２</a></li>
+							<li><a href="#">記事３</a></li>
+							<li><a href="#">記事４</a></li>
+							<li><a href="#">記事５</a></li>
+							<li><a href="#">記事６</a></li>
+						</ul>
+					</div>
+					
 				</div>
+
+				<!-- Start: onSP -->
+				<nav id="leftMenuNav" class="left-menu-nav onSP d-md-none d-sm-block col-sm-12">
+					<h3>役立つ情報一覧</h3>
+
+					<ul>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+						<li><a href="./index.html">コラム1</a></li>
+					</ul>
+
+					<a href="./index.html" class="left-menu-to-top">トップへ戻る</a>
+				</nav>
+				<!-- End: onSP -->
+
+			</div>
+		</div>
+
+		<div class="container banners-wrapper">
+			<div class="col-md-12 heading animate-box fadeInUp animated">
+
+				<h2>関連サイト一覧</h2>
+
+			</div>
+			<div class="row" id="relatedSites">
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_1.png">
+					</a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_2.png">
+					</a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_3.png">
+					</a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_4.png">
+					</a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_5.png">
+					</a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
+					<a href="#" class="banner">
+						<img src="./images/banners/banner_image_6.png">
+					</a>
+				</div>
+
+				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
@@ -104,10 +181,15 @@
 						<a href="#">会社概要</a>
 					</li>
 
+					<span class="divideFooterNavItems">
+						|
+					</span>
 					<li>
 						<a href="#">関連ブランド</a>
 					</li>
-
+					<span class="divideFooterNavItems">
+						|
+					</span>
 					<li>
 						<a href="#">プライバシーポリシー</a>
 					</li>
