--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -21,7 +21,9 @@
 			</div>
 
 			<div class="text-center">
-				<a href="#top"><h1>役立つコラム</h1></a>
+				<a href="./index.html">
+					<h1>役立つコラム</h1>
+				</a>
 			</div>
 		</div>
 	</header>
@@ -100,7 +102,7 @@
 
 
 
-		<div class="container">
+		<div class="container banners-wrapper">
 			<div class="col-md-12 heading animate-box fadeInUp animated">
 
 				<h2>関連サイト一覧</h2>
@@ -172,10 +174,15 @@
 						<a href="#">会社概要</a>
 					</li>
 
+					<span class="divideFooterNavItems">
+						|
+					</span>
 					<li>
 						<a href="#">関連ブランド</a>
 					</li>
-
+					<span class="divideFooterNavItems">
+						|
+					</span>
 					<li>
 						<a href="#">プライバシーポリシー</a>
 					</li>
