Fixed layout for footer.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -162,34 +162,36 @@
 	<footer>
 		<div class="container">
 
-			<div id="footerContents">
+			<div class="footer-wrapper">
 				<div class="footer-logo">
 					<a href="#" target="_blank">
 						<img src="./images/logo.png" alt="logo">
 					</a>
 				</div>
+				<div class="footer-contents column">
+					<ul class="footer-nav">
+						<li>
+							<a href="#">会社概要</a>
+						</li>
 
-				<ul class="footer-nav">
-					<li>
-						<a href="#">会社概要</a>
-					</li>
+						<span class="divideFooterNavItems">
+							|
+						</span>
+						<li>
+							<a href="#">関連ブランド</a>
+						</li>
+						<span class="divideFooterNavItems">
+							|
+						</span>
+						<li>
+							<a href="#">プライバシーポリシー</a>
+						</li>
+					</ul>
+					<p class="copyright">Copyright Leon Mah</p>
+				</div>
 
-					<span class="divideFooterNavItems">
-						|
-					</span>
-					<li>
-						<a href="#">関連ブランド</a>
-					</li>
-					<span class="divideFooterNavItems">
-						|
-					</span>
-					<li>
-						<a href="#">プライバシーポリシー</a>
-					</li>
-				</ul>
-
-				<p class="copyright">Copyright Leon Mah</p>
 			</div>
+
 		</div>
 	</footer>
 
