Fixed CSS for column.

--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -53,8 +53,8 @@
 
 				<div class="column col-md-8 col-sm-12">
 					<div class="column-content">
-						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
-						<ul class="column-content-list col-sm-6 col-xs-12">
+						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list">
 							<li><a href="#">記事１</a></li>
 							<li><a href="#">記事２</a></li>
 							<li><a href="#">記事３</a></li>
@@ -64,8 +64,8 @@
 						</ul>
 					</div>
 					<div class="column-content">
-						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
-						<ul class="column-content-list col-sm-6 col-xs-12">
+						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list">
 							<li><a href="#">記事１</a></li>
 							<li><a href="#">記事２</a></li>
 							<li><a href="#">記事３</a></li>
@@ -75,8 +75,8 @@
 						</ul>
 					</div>
 					<div class="column-content">
-						<img class="col-sm-6 col-xs-12" src="./images/cards/card_image_1.png" alt="">
-						<ul class="column-content-list col-sm-6 col-xs-12">
+						<img class="col-sm-6" src="./images/cards/card_image_1.png" alt="">
+						<ul class="column-content-list">
 							<li><a href="#">記事１</a></li>
 							<li><a href="#">記事２</a></li>
 							<li><a href="#">記事３</a></li>
@@ -169,34 +169,36 @@
 	<footer>
 		<div class="container">
 
-			<div id="footerContents">
+			<div class="footer-wrapper">
 				<div class="footer-logo">
 					<a href="#" target="_blank">
 						<img src="./images/logo.png" alt="logo">
 					</a>
 				</div>
+				<div class="footer-contents column">
+					<ul class="footer-nav">
+						<li>
+							<a href="#">会社概要</a>
+						</li>
 
-				<ul class="footer-nav">
-					<li>
-						<a href="#">会社概要</a>
-					</li>
+						<span class="divideFooterNavItems">
+							|
+						</span>
+						<li>
+							<a href="#">関連ブランド</a>
+						</li>
+						<span class="divideFooterNavItems">
+							|
+						</span>
+						<li>
+							<a href="#">プライバシーポリシー</a>
+						</li>
+					</ul>
+					<p class="copyright">Copyright Leon Mah</p>
+				</div>
 
-					<span class="divideFooterNavItems">
-						|
-					</span>
-					<li>
-						<a href="#">関連ブランド</a>
-					</li>
-					<span class="divideFooterNavItems">
-						|
-					</span>
-					<li>
-						<a href="#">プライバシーポリシー</a>
-					</li>
-				</ul>
-
-				<p class="copyright">Copyright Leon Mah</p>
 			</div>
+
 		</div>
 	</footer>
 
