Changed author names around website.

--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -187,7 +187,7 @@
 							<a href="#">プライバシーポリシー</a>
 						</li>
 					</ul>
-					<p class="copyright">Copyright Leon Mah</p>
+					<p class="copyright">Copyright Asa Leon</p>
 				</div>
 
 			</div>
