--- a/public/column-site/column1.html
+++ b/public/column-site/column1.html
@@ -194,7 +194,7 @@
 							<a href="#">プライバシーポリシー</a>
 						</li>
 					</ul>
-					<p class="copyright">Copyright Leon Mah</p>
+					<p class="copyright">Copyright Asa Leon</p>
 				</div>
 
 			</div>
