--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Column Site</title>
-	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/animate.css">
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
@@ -16,13 +15,9 @@
 <body>
 	<header>
 		<div class="container">
-			<div class="header-logo">
-				<img src="./images/logo.png" alt="logo" />
-			</div>
-
 			<div class="text-center">
 				<a href="./index.html">
-					<h1>役立つコラム</h1>
+					<h1>CSSとjQuery(JavaScript)</h1>
 				</a>
 			</div>
 		</div>
@@ -35,118 +30,85 @@
 				<div class="container-fluid">
 
 					<div class="col-md-12 heading animate-box fadeInUp animated">
+						<h2>CSSによるアニメーションとレスポンシブ対応</h2>
+					</div>
 
-						<h2>役立つコラムをご紹介します</h2>
-
+					<div class="col-md-12 heading animate-box fadeInUp animated">
+						<ul>
+							<li class="text-left">各項目にマウスカーソルを合わせると対象物が動く</li>
+							<li class="text-left">ウィンドウの幅を増減すると、それに応じて各項目の幅や並び方が変化</li>
+						</ul>
 					</div>
 
 					<div class="row">
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="./column1.html" class="card">
-								<img src="./images/cards/card_image_1.png" alt="column image" class="img-responsive">
+								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム１</h3>
+									<h3>タイトル１</h3>
 								</div>
 							</a>
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="./images/cards/card_image_2.png" alt="column image" class="img-responsive">
+								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム２</h3>
+									<h3>タイトル２</h3>
 								</div>
 							</a>
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="./images/cards/card_image_3.png" alt="column image" class="img-responsive">
+								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム３</h3>
+									<h3>タイトル３</h3>
+								</div>
+							</a>
+						</div>
+
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+							<a href="./column1.html" class="card">
+								<img src="./images/card-image.png" class="img-responsive">
+								<div class="card-body">
+									<h3>タイトル4</h3>
 								</div>
 							</a>
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="./images/cards/card_image_4.png" alt="column image" class="img-responsive">
+								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム４</h3>
+									<h3>タイトル5</h3>
 								</div>
 							</a>
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
 							<a href="#" class="card">
-								<img src="./images/cards/card_image_5.png" alt="column image" class="img-responsive">
+								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
-									<h3>コラム５</h3>
+									<h3>タイトル6</h3>
 								</div>
 							</a>
 						</div>
-
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
-								<img src="./images/cards/card_image_6.png" alt="column image" class="img-responsive">
-								<div class="card-body">
-									<h3>コラム６</h3>
-								</div>
-							</a>
-						</div>
-
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-
-
-		<div class="container banners-wrapper">
+	<div class="container">
+		<div class="container-fluid">
 			<div class="col-md-12 heading animate-box fadeInUp animated">
-
-				<h2>関連サイト一覧</h2>
-
+				<h2>jQueryによるページのトップへ戻る挙動</h2>
 			</div>
-			<div class="row" id="relatedSites">
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_1.png">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_2.png">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_3.png">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_4.png">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_5.png">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 feature fadeInUp animated">
-					<a href="#" class="banner">
-						<img src="./images/banners/banner_image_6.png">
-					</a>
-				</div>
-
-				<div class="clearfix"></div>
+			<div class="col-md-12 heading animate-box fadeInUp animated">
+				<ul>
+					<li class="text-left">フッター上部に設置された『ページトップへ』をクリックすると、トップへスクロールされる</li>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -161,37 +123,7 @@
 
 	<footer>
 		<div class="container">
-
-			<div class="footer-wrapper">
-				<div class="footer-logo">
-					<a href="#" target="_blank">
-						<img src="./images/logo.png" alt="logo">
-					</a>
-				</div>
-				<div class="footer-contents column">
-					<ul class="footer-nav">
-						<li>
-							<a href="#">会社概要</a>
-						</li>
-
-						<span class="divideFooterNavItems">
-							|
-						</span>
-						<li>
-							<a href="#">関連ブランド</a>
-						</li>
-						<span class="divideFooterNavItems">
-							|
-						</span>
-						<li>
-							<a href="#">プライバシーポリシー</a>
-						</li>
-					</ul>
-					<p class="copyright">Copyright Asa Leon</p>
-				</div>
-
 			</div>
-
 		</div>
 	</footer>
 
