--- a/public/column-site/index.html
+++ b/public/column-site/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Column Site</title>
+	<title>モックアップ：CSSとjQuery</title>
 	<link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/animate.css">
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
@@ -16,9 +16,7 @@
 	<header>
 		<div class="container">
 			<div class="text-center">
-				<a href="./index.html">
-					<h1>CSSとjQuery(JavaScript)</h1>
-				</a>
+					<h1>モックアップ：CSSとjQuery</h1>
 			</div>
 		</div>
 	</header>
@@ -33,16 +31,9 @@
 						<h2>CSSによるアニメーションとレスポンシブ対応</h2>
 					</div>
 
-					<div class="col-md-12 heading animate-box fadeInUp animated">
-						<ul>
-							<li class="text-left">各項目にマウスカーソルを合わせると対象物が動く</li>
-							<li class="text-left">ウィンドウの幅を増減すると、それに応じて各項目の幅や並び方が変化</li>
-						</ul>
-					</div>
-
 					<div class="row">
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="./column1.html" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル１</h3>
@@ -51,7 +42,7 @@
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル２</h3>
@@ -60,7 +51,7 @@
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル３</h3>
@@ -69,7 +60,7 @@
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="./column1.html" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル4</h3>
@@ -78,7 +69,7 @@
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル5</h3>
@@ -87,7 +78,7 @@
 						</div>
 
 						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
-							<a href="#" class="card">
+							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
 									<h3>タイトル6</h3>
@@ -96,19 +87,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-		<div class="container-fluid">
-			<div class="col-md-12 heading animate-box fadeInUp animated">
-				<h2>jQueryによるページのトップへ戻る挙動</h2>
-			</div>
-			<div class="col-md-12 heading animate-box fadeInUp animated">
-				<ul>
-					<li class="text-left">フッター上部に設置された『ページトップへ』をクリックすると、トップへスクロールされる</li>
-				</ul>
 			</div>
 		</div>
 	</div>
@@ -122,9 +100,6 @@
 	</div>
 
 	<footer>
-		<div class="container">
-			</div>
-		</div>
 	</footer>
 
 	<script src="./js/jquery-3.5.1.min.js"></script>
