Fixed; reading movies and images. Edit; public html's directory name and UI. Edit; brushing up frontend-coding.js.

--- a/public/mockup-site/child-page.html
+++ b/public/mockup-site/child-page.html
@@ -24,7 +24,7 @@
 
 	<div id="main-content" class="text-center">
 		<div class="container">
-			<div class="col-md-12 heading text-center animate-box fadeInUp animated">
+			<div class="col-md-12 heading text-center">
 				<h2>タイトル</h2>
 			</div>
 
@@ -47,8 +47,8 @@
 
 				<div class="column col-md-8 col-sm-12">
 					<div class="article-content">
-						<img class="col-sm-6" src="./images/article-image.png" alt="">
-						<ul class="article-content-list">
+						<img class="col-md-6 col-sm-12" src="./images/article-image.png" alt="">
+						<ul class="article-content-list col-md-6 col-sm-12">
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
@@ -58,8 +58,8 @@
 						</ul>
 					</div>
 					<div class="article-content">
-						<img class="col-sm-6" src="./images/article-image.png" alt="">
-						<ul class="article-content-list">
+						<img class="col-md-6 col-sm-12" src="./images/article-image.png" alt="">
+						<ul class="article-content-list col-md-6 col-sm-12">
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
@@ -69,8 +69,8 @@
 						</ul>
 					</div>
 					<div class="article-content">
-						<img class="col-sm-6" src="./images/article-image.png" alt="">
-						<ul class="article-content-list">
+						<img class="col-md-6 col-sm-12" src="./images/article-image.png" alt="">
+						<ul class="article-content-list col-md-6 col-sm-12">
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
 							<li><a href="#">記事</a></li>
@@ -79,7 +79,6 @@
 							<li><a href="#">記事</a></li>
 						</ul>
 					</div>
-					
 				</div>
 
 				<!-- Start: onSP -->
