--- a/public/mockup-site/index.html
+++ b/public/mockup-site/index.html
@@ -27,12 +27,12 @@
 			<div class="cards">
 				<div class="container-fluid">
 
-					<div class="col-md-12 heading animate-box fadeInUp animated">
+					<div class="col-md-12 heading ">
 						<h2>CSSによるアニメーションとレスポンシブ対応</h2>
 					</div>
 
 					<div class="row">
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
@@ -41,7 +41,7 @@
 							</a>
 						</div>
 
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
@@ -50,7 +50,7 @@
 							</a>
 						</div>
 
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
@@ -59,7 +59,7 @@
 							</a>
 						</div>
 
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
@@ -68,7 +68,7 @@
 							</a>
 						</div>
 
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
@@ -77,7 +77,7 @@
 							</a>
 						</div>
 
-						<div class="card-items col-md-4 col-sm-6 col-xxs-12 animate-box fadeInUp animated">
+						<div class="card-items col-md-4 col-sm-6 col-xxs-12">
 							<a href="./child-page.html" class="card">
 								<img src="./images/card-image.png" class="img-responsive">
 								<div class="card-body">
